Fix spacing

--- a/_sass/components/_cite.scss
+++ b/_sass/components/_cite.scss
@@ -7,6 +7,7 @@
   }
 
   h3 {
+    margin-bottom: $spacing-01;
     font-size: 1em;
     font-weight: 800;
   }
